package cn.cdut.a6pan.Adapter;

import androidx.recyclerview.widget.RecyclerView;

public class MyOfflineAdapter extends RecyclerView.Adapter {
}
